--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 services:
   # Shared UI Components Library
   ui-components:
-    build: ./ui-components
+    image: docker-demo-ui-components:latest
     container_name: microfrontend-ui-components
     ports:
       - "3005:3005"
@@ -18,7 +18,7 @@ services:
 
   # Accounts Microfrontend (Depende de ui-components)
   mf-accounts:
-    build: ./mf-accounts
+    image: docker-demo-mf-accounts:latest
     container_name: microfrontend-accounts
     ports:
       - "3001:3001"
@@ -35,7 +35,7 @@ services:
 
   # Transactions Microfrontend (Depende de ui-components)
   mf-transactions:
-    build: ./mf-transactions
+    image: docker-demo-mf-transactions:latest
     container_name: microfrontend-transactions
     ports:
       - "3002:3002"
@@ -52,7 +52,7 @@ services:
 
   # Movements Microfrontend (Depende de ui-components)
   mf-movements:
-    build: ./mf-movements
+    image: docker-demo-mf-movements:latest
     container_name: microfrontend-movements
     ports:
       - "3003:3003"
@@ -69,7 +69,7 @@ services:
 
   # User Preferences Microfrontend (Depende de ui-components)
   mf-user-preferences:
-    build: ./mf-user-preferences
+    image: docker-demo-mf-user-preferences:latest
     container_name: microfrontend-user-preferences
     ports:
       - "3004:3004"
@@ -86,7 +86,7 @@ services:
 
   # Shell - Main Container (Module Federation Host)
   shell:
-    build: ./shell
+    image: docker-demo-shell:latest
     container_name: microfrontend-shell
     ports:
       - "3000:3000"
